Revert "adding italian version"
This reverts commit c1828c4780e172633bba4ae8050f4b032d2c9034.

--- a/accesorios.html
+++ b/accesorios.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- i18n scripts -->
-    <script src="https://unpkg.com/i18next@21.6.3/dist/umd/i18next.min.js"></script>
-    <script src="js/i18n.js"></script>
 </head>
 <body>
     <header>
@@ -18,23 +15,13 @@
             <div class="logo-container">
                 <img src="images/logo.jpeg" alt="Logo PUA" class="logo">
             </div>
-            <!-- Language selector -->
-            <div class="lang-selector">
-                <a href="#" data-lang="es" class="active">🇨🇱 ES</a> |
-                <a href="#" data-lang="it">🇨🇭 IT</a>
-            </div>
-            <!-- Language selector -->
-            <div class="lang-selector">
-                <a href="#" data-lang="es" class="active">ES</a> |
-                <a href="#" data-lang="it">IT</a>
-            </div>
             <nav>
                 <ul>
-                    <li><a href="polerones.html" data-i18n="nav.polerones">Polerones</a></li>
-                    <li><a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a></li>
-                    <li><a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a></li>
-                    <li><a href="hogar.html" data-i18n="nav.hogar">Hogar</a></li>
-                    <li><a href="haz-tu-pedido.html" data-i18n="nav.haz_pedido">Haz tu pedido</a></li>
+                    <li><a href="polerones.html">Polerones</a></li>
+                    <li><a href="frajacket.html">Frajacket</a></li>
+                    <li><a href="accesorios.html">Accesorios</a></li>
+                    <li><a href="hogar.html">Hogar</a></li>
+                    <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,8 +29,8 @@
 
     <section class="page-header">
         <div class="container">
-            <h1 data-i18n="nav.accesorios">Accesorios</h1>
-            <p data-i18n="accesorios.header.subtitle">Complementos textiles elaborados con retazos y materiales recuperados</p>
+            <h1>Accesorios</h1>
+            <p>Complementos textiles elaborados con retazos y materiales recuperados</p>
         </div>
     </section>
 
@@ -58,12 +45,12 @@
     <section class="product-info">
         <div class="container">
             <div class="info-content">
-                <h2 data-i18n="accesorios.info.title">Sobre nuestros accesorios</h2>
-                <p data-i18n="accesorios.info.p1">Nuestros accesorios son el resultado de un proceso creativo que busca aprovechar al máximo los retazos textiles. Cada pieza es confeccionada a mano, dando una segunda vida a materiales que de otra forma serían desechados.</p>
+                <h2>Sobre nuestros accesorios</h2>
+                <p>Nuestros accesorios son el resultado de un proceso creativo que busca aprovechar al máximo los retazos textiles. Cada pieza es confeccionada a mano, dando una segunda vida a materiales que de otra forma serían desechados.</p>
                 
-                <p data-i18n="accesorios.info.p2">En PUA creemos que incluso los complementos más pequeños pueden tener un gran impacto, tanto en tu estilo como en el medio ambiente. Por eso, cada accesorio que creamos combina funcionalidad, estética y sostenibilidad.</p>
+                <p>En PUA creemos que incluso los complementos más pequeños pueden tener un gran impacto, tanto en tu estilo como en el medio ambiente. Por eso, cada accesorio que creamos combina funcionalidad, estética y sostenibilidad.</p>
                 
-                <p data-i18n="accesorios.info.p3">Los diseños coloridos y las texturas variadas hacen que cada accesorio sea único, reflejando nuestra filosofía de valorar el oficio de la costura y generar productos de calidad que respetan el entorno.</p>
+                <p>Los diseños coloridos y las texturas variadas hacen que cada accesorio sea único, reflejando nuestra filosofía de valorar el oficio de la costura y generar productos de calidad que respetan el entorno.</p>
             </div>
         </div>
     </section>
@@ -73,18 +60,18 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>PUA</h3>
-                    <p data-i18n="footer.tagline">Diseño textil infantil sostenible</p>
-                    <p data-i18n="footer.location">Valparaíso, Chile</p>
+                    <p>Diseño textil infantil sostenible</p>
+                    <p>Valparaíso, Chile</p>
                 </div>
                 <div class="footer-section">
-                    <h3 data-i18n="footer.links">Enlaces</h3>
-                    <a href="polerones.html" data-i18n="nav.polerones">Polerones</a>
-                    <a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a>
-                    <a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a>
-                    <a href="hogar.html" data-i18n="nav.hogar">Hogar</a>
+                    <h3>Enlaces</h3>
+                    <a href="polerones.html">Polerones</a>
+                    <a href="frajacket.html">Frajacket</a>
+                    <a href="accesorios.html">Accesorios</a>
+                    <a href="hogar.html">Hogar</a>
                 </div>
                 <div class="footer-section">
-                    <h3 data-i18n="footer.follow_us">Síguenos</h3>
+                    <h3>Síguenos</h3>
                     <div class="social-links">
                         <a href="https://www.instagram.com/pua_disenos/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -92,7 +79,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p data-i18n="footer.copyright">© 2025 PUA - Todos los derechos reservados</p>
+                <p>&copy; 2025 PUA - Todos los derechos reservados</p>
             </div>
         </div>
     </footer>
