--- a/polerones.html
+++ b/polerones.html
@@ -10,9 +10,6 @@
     <!-- Fuente caligráfica para sección Polerones -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- i18n scripts -->
-    <script src="https://unpkg.com/i18next@21.6.3/dist/umd/i18next.min.js"></script>
-    <script src="js/i18n.js"></script>
 </head>
 <body>
     <header>
@@ -20,23 +17,13 @@
             <div class="logo-container">
                 <img src="images/logo.jpeg" alt="Logo PUA" class="logo">
             </div>
-            <!-- Language selector -->
-            <div class="lang-selector">
-                <a href="#" data-lang="es" class="active">🇨🇱 ES</a> |
-                <a href="#" data-lang="it">🇨🇭 IT</a>
-            </div>
-            <!-- Language selector -->
-            <div class="lang-selector">
-                <a href="#" data-lang="es" class="active">ES</a> |
-                <a href="#" data-lang="it">IT</a>
-            </div>
             <nav>
                 <ul>
-                    <li><a href="polerones.html" data-i18n="nav.polerones">Polerones</a></li>
-                    <li><a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a></li>
-                    <li><a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a></li>
-                    <li><a href="hogar.html" data-i18n="nav.hogar">Hogar</a></li>
-                    <li><a href="haz-tu-pedido.html" data-i18n="nav.haz_pedido">Haz tu pedido</a></li>
+                    <li><a href="polerones.html">Polerones</a></li>
+                    <li><a href="frajacket.html">Frajacket</a></li>
+                    <li><a href="accesorios.html">Accesorios</a></li>
+                    <li><a href="hogar.html">Hogar</a></li>
+                    <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,7 +31,7 @@
 
     <section class="page-header">
         <div class="container">
-            <h1 data-i18n="nav.polerones">Polerones</h1>
+            <h1>Polerones</h1>
             <p></p>
         </div>
     </section>
@@ -60,12 +47,12 @@
     <section class="product-info">
         <div class="container">
             <div class="info-content">
-                <h2 data-i18n="polerones.info.title">Sobre nuestros polerones</h2>
-                <p data-i18n="polerones.info.p1">Cada poleron de PUA es una pieza única, confeccionada artesanalmente con materiales reciclados y sostenibles.</p>
+                <h2>Sobre nuestros polerones</h2>
+                <p>Cada poleron de PUA es una pieza única, confeccionada artesanalmente con materiales reciclados y sostenibles. Nuestro proceso creativo comienza con la selección cuidadosa de telas y materiales recuperados, que luego transformamos en prendas funcionales y llenas de personalidad.</p>
                 
-                <p data-i18n="polerones.info.p2">Valoramos el oficio de la costura y cada detalle es trabajado con dedicación, asegurando que cada prenda no solo sea hermosa sino también duradera.</p>
+                <p>Valoramos el oficio de la costura y cada detalle es trabajado con dedicación, asegurando que cada prenda no solo sea hermosa sino también duradera. Los diseños geométricos y coloridos que caracterizan nuestros polerones están pensados especialmente para los más pequeños, combinando estética y comodidad.</p>
                 
-                <p data-i18n="polerones.info.p3">Al adquirir un poleron PUA, estás apoyando un proyecto que busca reducir el impacto ambiental de la industria textil, mientras vistes a tus hijos con prendas únicas y llenas de historia.</p>
+                <p>Al adquirir un poleron PUA, estás apoyando un proyecto que busca reducir el impacto ambiental de la industria textil, mientras vistes a tus hijos con prendas únicas y llenas de historia.</p>
             </div>
         </div>
     </section>
@@ -75,18 +62,18 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>PUA</h3>
-                    <p data-i18n="footer.tagline">Diseño textil infantil sostenible</p>
-                    <p data-i18n="footer.location">Valparaíso, Chile</p>
+                    <p>Diseño textil infantil sostenible</p>
+                    <p>Valparaíso, Chile</p>
                 </div>
                 <div class="footer-section">
-                    <h3 data-i18n="footer.links">Enlaces</h3>
-                    <a href="polerones.html" data-i18n="nav.polerones">Polerones</a>
-                    <a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a>
-                    <a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a>
-                    <a href="hogar.html" data-i18n="nav.hogar">Hogar</a>
+                    <h3>Enlaces</h3>
+                    <a href="polerones.html">Polerones</a>
+                    <a href="frajacket.html">Frajacket</a>
+                    <a href="accesorios.html">Accesorios</a>
+                    <a href="hogar.html">Hogar</a>
                 </div>
                 <div class="footer-section">
-                    <h3 data-i18n="footer.follow_us">Síguenos</h3>
+                    <h3>Síguenos</h3>
                     <div class="social-links">
                         <a href="https://www.instagram.com/pua_disenos/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -94,7 +81,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p data-i18n="footer.copyright">© 2025 PUA - Todos los derechos reservados</p>
+                <p>&copy; 2025 PUA - Todos los derechos reservados</p>
             </div>
         </div>
     </footer>
