--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -39,7 +39,7 @@
                 <div class="form-group">
                     <label for="message">Cuéntanos tu proyecto en detalle</label>
                     <textarea id="message" name="message" rows="6"
-                        placeholder="Ejemplo: Quiero un polerón infantil acolchado, talla M (6 años), en felpa de algodón orgánico color celeste, con estampado de montañas en la espalda, capucha forrada, puños elásticos y bolsillos laterales."
+                        placeholder="Ejemplo: Quiero una frajacket tamaño adulto, hecha con la frazada de mi abuelita. Quisiera que la frajacket tenga un bolsillo escondido para guardar cosas personales, una capucha grande y el interior con una tela morada que también proporcionaré. Envío fotos de la frazada y de las otras telas que quisiera proporcionar para su confección."
                         required></textarea>
                     <p class="form-note">Si tienes telas propias que quieras que utilicemos, envíanos sus imágenes al correo <a href="mailto:pua@laboratoriotextil.com">pua@laboratoriotextil.com</a> y te responderemos a la brevedad.</p>
                 </div>
